--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body{
     font-family: "Open Sans", sans-serif;
     font-weight: 400;
     font-style: normal;
+    line-height: 1.375;
 }
 
 .page-header{
@@ -38,6 +39,7 @@ body{
     margin: 0 auto;
     padding-left: 40px;
     padding-right: 40px;
+    
 }
 
 .page-header__logo{
@@ -63,9 +65,9 @@ body{
 .page-header__nav-link {
     margin: 0 25px;
     color: #1f1e1e;
-    font-size: 18px;
-    line-height: 1.3;
     font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
     text-decoration: none;
     transition: color 0.2s;
 }
@@ -83,21 +85,25 @@ body{
 }
 
 .btn {
-    display: inline-flex;
+    display: inline-block;
     box-sizing: border-box;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    text-decoration: none;
+    padding: 15px 40px;
     border: 1px solid #1f1e1e;
-    outline: none;
-    border-radius: 0;
+    background-color: transparent;
+    color: #1f1e1e;
+    font-family: "Open Sans",sans-serif;
     font-weight: 600;
     font-size: 16px;
-    line-height: 1.3;
-    color: #1f1e1e;
-    padding: 15px 40px;
+    line-height: 20px;
+    text-align: center;
+    text-decoration: none;
     transition: background-color 0.2s, color 0.2s;
+    overflow: hidden;
+    cursor: pointer;
+    outline: none;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0;
 }
 
 .btn:hover,
