--- a/srs/styles/styles.css
+++ b/srs/styles/styles.css
@@ -1,210 +1,3 @@
-html,
-body{
-    margin: 0;
-    padding: 0;
-    width: 100%;
-}
-
-.body{
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    padding-top: 147px;
-    font-family: "Open Sans", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    line-height: 1.375;
-}
-
-.page-header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 147px;
-    display: flex;
-    align-items: center;
-    background-color: rgba(222, 222, 222, 0.5);
-    backdrop-filter: blur(20px);
-    z-index: 100;
-}
-
-.page-header__container{
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    max-width: 1414px;
-    width: 100%;
-    margin: 0 auto;
-    padding-left: 40px;
-    padding-right: 40px;
-    
-}
-
-.page-header__logo{
-    flex-shrink: 0;
-    width: 202px;
-    height: 147px;
-    font-size: 0;
-    text-decoration: none;
-}
-
-.page-header__logo-icon {
-    width: 100%;
-    height: 100%;
-}
-
-.page-header__nav {
-    display: flex;
-    align-items: baseline;
-    margin: 0 auto;
-    gap: 50px;
-}
-
-.page-header__nav-link {
-    margin: 0 25px;
-    color: #1f1e1e;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 25px;
-    text-decoration: none;
-    transition: color 0.2s;
-}
-
-.page-header__nav-link:hover,
-.page-header__nav-link:active {
-    color: #BC3324;
-}
-
-.page-header__right-block {
-    display: flex;
-    justify-content: flex-end;
-    align-items: content;
-    width: 202px;
-}
-
-.btn {
-    display: inline-block;
-    box-sizing: border-box;
-    padding: 15px 40px;
-    border: 1px solid #1f1e1e;
-    background-color: transparent;
-    color: #1f1e1e;
-    font-family: "Open Sans",sans-serif;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 20px;
-    text-align: center;
-    text-decoration: none;
-    transition: background-color 0.2s, color 0.2s;
-    overflow: hidden;
-    cursor: pointer;
-    outline: none;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0;
-}
-
-.btn:hover,
-.btn:active {
-    background-color: #1f1e1e;
-    color: #FFFFFF;
-}
-
-.main{
-    flex: 1 0 auto;
-}
-
-.listing {
-    flex-direction: column;
-}
-
-.listing__events-list {
-    display: flex;
-    gap: 60px;
-    flex-wrap: wrap;
-}
-
-.events__listing {
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    max-width: 1414px;
-    width: 100%;
-    margin: 0 auto;
-    padding-left: 40px;
-    padding-right: 40px;
-}
-
-.event-card {
-    display: flex;
-    width: 405px;
-    max-width: 100%;
-    min-width: 280px;
-}
-
-.event-card__link {
-    display: flex;
-    flex-direction: column;
-    text-decoration: none;
-    width: 100%;
-    color: #1f1e1e;
-}
-
-.event-card__link:hover .event-card__title{
-    color: #BC3324;
-    text-decoration-color: #BC3324;
-}
-
-.event-card__picture {
-    display: block;
-    width: 100%;
-    margin: 0 0 25px;
-    overflow: hidden;
-    font-size: 0px;
-    text-decoration: none;
-    position: relative;
-}
-
-.event-card__picture::after {
-    content: "";
-    display: block;
-    width: 100%;
-    padding-top: 107.16%;
-}
-
-.event-card__img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.event-card__title {
-    margin: 0 0 15px;
-    min-height: 66px;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 1.3;
-    color: #1f1e1e;
-    text-decoration: underline transparent;
-    transition: color 0.2s, text-decoration 0.2s;
-}
-
-.event-card__text {
-    margin: 0 0 auto;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.3;
-}
-
-.event-card__time {
-    font-size: 15px;
-    display: block;
-}
 
 .reserve {
     display: grid;
@@ -228,7 +21,7 @@ body{
 
 .reserve__order {
     grid-area: "order";
-    background-color:#1f1e1e;
+    background-color:@black;
 }
 
 .reserve__legend {
@@ -240,6 +33,3 @@ body{
     width: calc(33.333% - 40px);
 }
 
-.page-footer{
-    flex: 0 0 auto;
-}
