--- a/src/styles/global/common.less
+++ b/src/styles/global/common.less
@@ -9,10 +9,10 @@ body {
   flex-direction: column;
   min-height: 100vh;
   background-color: @gray;
-  background-image: url(../assets/images/noise.png), url(../assets/images/bg.png);
-  background-position: 0 0, 0 0;
-  background-size: auto, 100% auto;
-  background-repeat: repeat, repeat-y;
+  //background-image: url(../assets/images/noise.png), url(../assets/images/bg.png);
+  //background-position: 0 0, 0 0;
+  //background-size: auto, 100% auto;
+  //background-repeat: repeat, repeat-y;
   color: @black;
   font-family: @font1;
   font-size: 16px;
