--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,5 +1,5 @@
 @import "global/variables.less";
-//@import "global/fonts.less";
+@import "global/fonts.less";
 @import "global/common.less";
 // @import "vendor/swiper.less";
 @import "blocks/btn.less";
