--- a/src/styles/global/fonts.less
+++ b/src/styles/global/fonts.less
@@ -10,3 +10,9 @@
   font-weight: 300;
   font-style: normal;
 }
+@font-face {
+  font-family: "Lora";
+  src: local("Lora-Medium.ttf"), url("../assets/fonts/Lora-Medium.ttf") format("ttf");
+  font-weight: 400;
+  font-style: normal;
+}
