--- a/src/styles/blocks/btn.less
+++ b/src/styles/blocks/btn.less
@@ -18,10 +18,9 @@
     justify-content: center;
     align-items: center;
     border-radius: 0;
-}
-
-.btn:hover,
-.btn:active {
+    &:hover,
+    &:active {
     background-color: @black;
     color: @white;
+    }
 }
