--- a/src/styles/blocks/listing.less
+++ b/src/styles/blocks/listing.less
@@ -1,23 +1,11 @@
 .listing {
     flex-direction: column;
-}
-
-.listing__events-list {
-    display: flex;
-    gap: 60px;
-    flex-wrap: wrap;
-}
-
-.events__listing {
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    max-width: 1414px;
-    width: 100%;
-    margin: 0 auto;
-    padding-left: 40px;
-    padding-right: 40px;
-}
-.listing__event-card {
-    width: calc(33.333% - 40px);
+    &__events-list {
+        display: flex;
+        gap: 60px;
+        flex-wrap: wrap;
+    }
+    &__event-card {
+        width: calc(33.333% - 40px);
+    }
 }
