--- a/src/styles/blocks/page-header.less
+++ b/src/styles/blocks/page-header.less
@@ -9,58 +9,46 @@
     background-color: rgba(222, 222, 222, 0.5);
     backdrop-filter: blur(20px);
     z-index: 100;
-}
-
-.page-header__container{
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    max-width: 1414px;
-    width: 100%;
-    margin: 0 auto;
-    padding-left: 40px;
-    padding-right: 40px;
-    
-}
-
-.page-header__logo{
-    flex-shrink: 0;
-    width: 202px;
-    height: 147px;
-    font-size: 0;
-    text-decoration: none;
-}
-
-.page-header__logo-icon {
-    width: 100%;
-    height: 100%;
-}
-
-.page-header__nav {
-    display: flex;
-    align-items: baseline;
-    margin: 0 auto;
-    gap: 50px;
-}
-
-.page-header__nav-link {
-    margin: 0 25px;
-    color: @black;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 25px;
-    text-decoration: none;
-    transition: color 0.2s;
-}
-
-.page-header__nav-link:hover,
-.page-header__nav-link:active {
-    color: @red;
-}
-
-.page-header__right-block {
-    display: flex;
-    justify-content: flex-end;
-    align-items: content;
-    width: 202px;
+    &__container{
+    .container;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    &__logo{
+        flex-shrink: 0;
+        width: 202px;
+        height: 147px;
+        font-size: 0;
+        text-decoration: none;
+    }
+    &__logo-icon {
+        width: 100%;
+        height: 100%;
+    }
+    &__nav {
+        display: flex;
+        align-items: baseline;
+        margin: 0 auto;
+        gap: 50px;
+    }
+    &__nav-link {
+        margin: 0 25px;
+        color: @black;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 25px;
+        text-decoration: none;
+        transition: color 0.2s;
+        &:hover,
+        &:active {
+            color: @red;
+        }
+    }  
+    &__right-block {
+        display: flex;
+        justify-content: flex-end;
+        align-items: content;
+        width: 202px;
+    } 
 }
