--- a/src/styles/global/mixins.less
+++ b/src/styles/global/mixins.less
@@ -1,7 +1,5 @@
-.events__listing {
+.container(){
     box-sizing: border-box;
-    display: flex;
-    align-items: center;
     max-width: 1414px;
     width: 100%;
     margin: 0 auto;
