--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,4 +1,5 @@
 @import "global/variables.less";
+@import "global/mixins.less";
 @import "global/fonts.less";
 @import "global/common.less";
 // @import "vendor/swiper.less";
