--- a/src/styles/global/variables.less
+++ b/src/styles/global/variables.less
@@ -5,6 +5,7 @@
 @red_dark: #a51505;
 @gray: #dedede;
 @gray_dark: #bfbfbf;
+@gray2: #6c6c6c;
 // Шрифты
 @font1: "Open Sans", sans-serif;
 @font2: "Lora", serif;
