--- a/src/styles/global/common.less
+++ b/src/styles/global/common.less
@@ -37,3 +37,30 @@ img {
   height: auto;
   object-fit: cover;
 }
+
+input,
+textarea,
+select {
+  outline: none;
+  box-shadow: none;
+  color: @black;
+  font-family: @font1;
+}
+
+textarea {
+  resize: none;
+}
+
+input,
+textarea {
+  &::placeholder {
+    color: @gray2;
+  }
+}
+
+input:focus,
+textarea:focus {
+  &::placeholder {
+    color: transparent;
+  }
+}
