--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -4,6 +4,9 @@
 @import "global/common.less";
 // @import "vendor/swiper.less";
 @import "blocks/btn.less";
+@import "blocks/field.less";
+@import "blocks/form.less";
+@import "blocks/pp.less";
 @import "blocks/section-title.less";
 @import "blocks/event-card.less";
 @import "blocks/listing.less";
