--- a/src/styles/blocks/field.less
+++ b/src/styles/blocks/field.less
@@ -11,5 +11,43 @@
         font-size: 16px;
         font-weight: 400;
         line-height: 1.375;
+        border: none;
+    }
+    &__input {
+        height: 55px;
+        padding: 17px 20px 16px;
+    }
+    &__textarea {
+        height: 150px;
+        padding: 20px;
+    }
+    &__title {
+        margin: 0 0 10px;
+        display: block;
+        font-weight: 700;
+        line-height: 18px;
+        line-height: 1.3;
+        color: @black;
+    }
+    &__label {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.3;
+        color: @black;
+        margin: 0 0 5px;
+    }
+    &__select {
+        box-sizing: border-box;
+        display: block;
+        width: 100%;
+        height: 55px;
+        padding: 0 20px;
+        border: none;
+        border-radius: 5px;
+        background-color: @white;
+        font-size: 16px;
+        line-height: 1.3;
+        color: @black;
+
     }
 }
