--- a/src/styles/blocks/form.less
+++ b/src/styles/blocks/form.less
@@ -1,3 +1,19 @@
 .form {
-    
+    &__list {
+        display: flex;
+        flex-wrap: wrap;
+
+    }
+    &__field {
+        width: 100%;
+        &--w50 {
+            width: calc(50% - 30px);
+        }
+    }
+    &__group {
+        width: 100%;
+        &--w50 {
+            width: calc(50% - 30px);
+        }
+    }
 }
