--- a/src/styles/global/mixins.less
+++ b/src/styles/global/mixins.less
@@ -6,3 +6,16 @@
     padding-left: 40px;
     padding-right: 40px;
 }
+.is-hidden() {
+    position: absolute !important;
+    width: 0 !important;
+    height: 0 !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    border: none !important;
+    clip-path: none !important;
+    white-space: nowrap !important;
+    overflow: hidden !important;
+    visibility: hidden !important;
+    pointer-events: none !important;
+}
