--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -7,6 +7,8 @@
 @import "blocks/field.less";
 @import "blocks/form.less";
 @import "blocks/pp.less";
+@import "blocks/radio.less";
+@import "blocks/check.less";
 @import "blocks/section-title.less";
 @import "blocks/event-card.less";
 @import "blocks/listing.less";
