--- a/src/styles/blocks/form.less
+++ b/src/styles/blocks/form.less
@@ -2,12 +2,14 @@
     &__list {
         display: flex;
         flex-wrap: wrap;
-
     }
     &__field {
         width: 100%;
         &--w50 {
             width: calc(50% - 30px);
+        }
+        &--mb30 {
+            margin-bottom: 30px;
         }
     }
     &__group {
