--- a/src/styles/blocks/check.less
+++ b/src/styles/blocks/check.less
@@ -1,49 +1,52 @@
 .check {
-    box-sizing: border-box;
-    position: relative;
-    padding-left: 24px;
-    display: inline-flex;
-    align-items: flex-start;
-    min-height: 24px;
-    padding-top: 2px;
-    color: @black;
-    cursor: pointer;
+  box-sizing: border-box;
+  position: relative;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  min-height: 24px;
+  padding-top: 2px;
+  padding-left: 24px;
+  color: @black;
+  cursor: pointer;
     &__input {
-        .is-hidden;
+        .is-hidden();
         &:checked {
           & ~ .check__mark {
             background-color: @black;
             &::after {
               content: "";
+              display: block;
               position: absolute;
-              top: 2ps;
               left: 7px;
+              top: 2px;
               width: 6px;
               height: 12px;
-              background-color: transparent;
               border-bottom: 2px solid @white;
               border-right: 2px solid @white;
-              border-radius: 2px;
               transform: rotate(45deg);
             }
           }
         }
       }
     &__mark {
+        box-sizing: border-box;
+        display: block;
         position: absolute;
-        top: 0;
         left: 0;
+        top: 0;
         width: 24px;
         height: 24px;
-        background-color: transparent;
-        border: 2px solid @black;
-        transition: background-color 0.2s;
+        border: 1px solid @black;
     }
     &__label {
         margin-left: 15px;
-        margin-left: 400;
-        color: @black;
-        font-size: 14px;
-        line-height: 1.3;
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 22px;
+        &--s {
+          font-size: 14px;
+          line-height: 19px;
+        }
     }
 }
