--- a/src/styles/blocks/field.less
+++ b/src/styles/blocks/field.less
@@ -1,40 +1,39 @@
 .field {
     display: flex;
-    flex-direction: column;
+    flex-direction: column;         
     &__input,
     &__textarea {
-        box-sizing: border-box;
-        display: block;
-        width: 100%;
-        background-color: @white;
-        border-radius: 5px;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 1.375;
-        border: none;
+      box-sizing: border-box;
+      display: block;
+      width: 100%;
+      border: none;
+      border-radius: 5px;
+      background-color: @white;
+      font-size: 16px;
+      line-height: 1.375;
     }
     &__input {
         height: 55px;
-        padding: 17px 20px 16px;
+        padding: 0 20px;
     }
     &__textarea {
         height: 150px;
         padding: 20px;
     }
     &__title {
-        margin: 0 0 10px;
         display: block;
-        font-weight: 700;
-        line-height: 18px;
-        line-height: 1.3;
+        margin: 0 0 10px;
         color: @black;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 25px;
     }
     &__label {
-        font-weight: 400;
+        display: block;
+        margin-bottom: 5px;
         font-size: 16px;
         line-height: 1.3;
         color: @black;
-        margin: 0 0 5px;
     }
     &__select {
         box-sizing: border-box;
@@ -46,8 +45,27 @@
         border-radius: 5px;
         background-color: @white;
         font-size: 16px;
-        line-height: 1.3;
-        color: @black;
+        line-height: 1.375;
+    }
+    &__date-input {
+        width: 55px;
+        box-sizing: border-box;
+        display: block;
+        border: none;
+        text-align: center;
+        border-radius: 5px;
+        background-color: @white;
+        font-size: 16px;
+        line-height: 1.375;
+        height: 55px;
+        padding: 17px 13px 16px;
+        &--w110 {
+            width: 110px;
+        }
+    }
+    &__date-inputs {
+        display: flex;
+        gap: 15px;
 
     }
 }
