--- a/src/styles/blocks/radio.less
+++ b/src/styles/blocks/radio.less
@@ -4,7 +4,6 @@
     align-items: flex-start;
     gap: 15px;
     &__item {
-        position:  relative;
         box-sizing: border-box;
         position: relative;
         display: flex;
@@ -15,6 +14,9 @@
         padding-left: 23px;
         color: @black;
         cursor: pointer;
+        &:last-child {
+            margin-bottom: 0;
+          }
     }
     &__input {
         .is-hidden();
@@ -26,22 +28,23 @@
     }
     &__marker {
         box-sizing: border-box;
+        display: block;
         position: absolute;
-        left:  0;
+        left: 0;
         top: 0;
         width: 23px;
         height: 23px;
-        border-radius: 50%;
         border: 2px solid @black;
+        border-radius: 50%;
         padding: 3px;
         background-clip: content-box;
         background-color: transparent;
         transition: background-color 0.2s;
     }
     &__label {
-        margin-left:  auto;
+        margin-left: 20px;
         font-weight: 400;
         font-size: 16px;
-        line-height: 1.3;
+        line-height: 22px;
     }
 }
