--- a/src/styles/blocks/form.less
+++ b/src/styles/blocks/form.less
@@ -2,6 +2,7 @@
     &__list {
         display: flex;
         flex-wrap: wrap;
+        gap: 30px 60px;
     }
     &__field {
         width: 100%;
@@ -17,5 +18,16 @@
         &--w50 {
             width: calc(50% - 30px);
         }
+    }
+    &__section {
+        margin-bottom: 50px;
+    }
+    &__title {
+        display: block;
+        margin: 0 0 10px;
+        color: @black;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 25px;
     }
 }
