--- a/src/styles/blocks/btn.less
+++ b/src/styles/blocks/btn.less
@@ -11,6 +11,7 @@
     line-height: 20px;
     text-align: center;
     text-decoration: none;
+    justify-content: center;
     transition: background-color 0.2s, color 0.2s;
     overflow: hidden;
     cursor: pointer;
