--- a/src/styles/blocks/form.less
+++ b/src/styles/blocks/form.less
@@ -30,4 +30,28 @@
         font-size: 18px;
         line-height: 25px;
     }
+    &__btns {
+        display: flex;
+        align-items: center;
+        margin-top: 40px;
+    }
+    &__btn {
+        max-width: 400px;
+        width: 100%;
+    }
+    &__btn-close {
+        margin-left: 200px;
+        border: none;
+        padding: 10px 15px;
+        background-color: transparent;
+        text-decoration: underline;
+        font-weight: 600;
+        line-height: 1.3;
+        color: @black;
+        transition: color 0.2s;
+        &:hover,
+        &:active {
+            columns: @red;
+        }
+    }
 }
