--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -4,12 +4,13 @@
 @import "global/common.less";
 // @import "vendor/swiper.less";
 @import "blocks/btn.less";
+@import "blocks/x-btn.less";
+@import "blocks/section-title.less";
 @import "blocks/field.less";
 @import "blocks/form.less";
 @import "blocks/pp.less";
 @import "blocks/radio.less";
 @import "blocks/check.less";
-@import "blocks/section-title.less";
 @import "blocks/event-card.less";
 @import "blocks/listing.less";
 @import "blocks/reserve.less";
