--- a/src/styles/blocks/form.less
+++ b/src/styles/blocks/form.less
@@ -40,18 +40,18 @@
         width: 100%;
     }
     &__btn-close {
-        margin-left: 200px;
+        margin: 0 auto;
+        padding: 4px 0;
         border: none;
-        padding: 10px 15px;
-        background-color: transparent;
-        text-decoration: underline;
-        font-weight: 600;
-        line-height: 1.3;
+        background: transparent;
         color: @black;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 22px;
+        text-decoration: underline;
         transition: color 0.2s;
-        &:hover,
-        &:active {
-            columns: @red;
+        &:hover {
+          color: @red;
         }
     }
 }
