--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -7,6 +7,7 @@
 @import "blocks/x-btn.less";
 @import "blocks/section-title.less";
 @import "blocks/field.less";
+@import "blocks/table.less";
 @import "blocks/form.less";
 @import "blocks/pp.less";
 @import "blocks/radio.less";
