--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -3,11 +3,14 @@
 @import "global/fonts.less";
 @import "global/common.less";
 // @import "vendor/swiper.less";
+@import "blocks/article.less";
+@import "blocks/about.less";
 @import "blocks/btn.less";
 @import "blocks/x-btn.less";
 @import "blocks/section-title.less";
 @import "blocks/field.less";
 @import "blocks/table.less";
+@import "blocks/content.less";
 @import "blocks/form.less";
 @import "blocks/pp.less";
 @import "blocks/radio.less";
