--- a/src/styles/blocks/event-card.less
+++ b/src/styles/blocks/event-card.less
@@ -46,12 +46,24 @@
         color: @black;
         text-decoration: underline transparent;
         transition: color 0.2s, text-decoration 0.2s;
+        @media @bw1660 {
+            margin: 0 0 10px;
+        }
+        @media @bw1020 {
+            min-height: 21px;
+            font-size: 16px;
+            line-height: 21px;
+        }
     }
     &__text {
         margin: 0 0 auto;
         font-weight: 400;
         font-size: 16px;
         line-height: 1.3;
+        @media @bw1020 {
+            font-size: 14px;
+            line-height: 19px;
+        }
     }
     &__time {
         font-size: 15px;
