--- a/src/styles/blocks/listing.less
+++ b/src/styles/blocks/listing.less
@@ -1,11 +1,41 @@
 .listing {
+    .container;
+    display: flex;
     flex-direction: column;
+    &__article-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
     &__events-list {
         display: flex;
         gap: 60px;
         flex-wrap: wrap;
+        @media @bw1660 {
+            gap: 40px;
+        }
+        @media @bw1020 {
+            gap: 30px;
+        }
     }
     &__event-card {
         width: calc(33.333% - 40px);
+        margin: 0 0 60px;
+        @media @bw1660 {
+            width: calc(33.3333% - 26.666px);
+        }
+        @media @bw1020 {
+            width: calc(50% - 25px);
+        }
+        @media @bw650 {
+            width: 100%;
+        }
+    }
+    &__link {
+        margin-top: 85px;
+        margin-left: auto;
+    }
+    &__more-btn {
+        margin: 70px auto 0;
     }
 }
