--- a/src/styles/global/variables.less
+++ b/src/styles/global/variables.less
@@ -10,3 +10,12 @@
 @font1: "Open Sans", sans-serif;
 @font2: "Lora", serif;
 @font3: "mak", serif;
+//Размеры экрана
+@bw768: ~"(max-width: 767px)";
+@w768 ~"(min-width: 768px)";
+@bw1340: ~"(max-width: 1339px)";
+@b1340: ~"(min-width: 1340px)";
+@bw1660: ~"(max-width: 1659px)";
+@bw1020: ~"(max-width: 1019px)";
+@bw400: ~"(max-width: 399px)";
+@bw650: ~"(max-width: 649px)";
