--- a/src/styles/blocks/section-title.less
+++ b/src/styles/blocks/section-title.less
@@ -9,4 +9,24 @@
     font-size: 45px;
     font-family: @font2
 }
+.title__container {
+margin-top: 100px;
+}
+
+.title__lenni {
+    margin-top: 70px;
+    margin-bottom: 70px;
+}
+.title__i-want-container {
+    display: flex;
+}
+.title__btn--red {
+    background-color: @orange;
+    color: @white;
+    border-color: none;
+    transition: background-color 0.2s;
+    &:hover {
+        background-color: @red;
+    }
+}
 
