--- a/src/styles/blocks/about.less
+++ b/src/styles/blocks/about.less
@@ -48,6 +48,9 @@
         gap: 50px 60px;
         margin-top: 100px;
     }
+    &__block3-content {
+        height: 100%;
+    }
     &__block3-picture {
         box-sizing: border-box;
         grid-area: pic3;
