--- a/src/styles/global/variables.less
+++ b/src/styles/global/variables.less
@@ -3,7 +3,7 @@
 @black: #1f1e1e;
 @red: #bc3324;
 @red_dark: #a51505;
-@orange: #BC3324
+@orange: #BC3324;
 @gray: #dedede;
 @gray_dark: #bfbfbf;
 @gray2: #6c6c6c;
@@ -20,3 +20,5 @@
 @bw1020: ~"(max-width: 1019px)";
 @bw400: ~"(max-width: 399px)";
 @bw650: ~"(max-width: 649px)";
+@bw1170:  ~"(max-width: 1169px)";
+@bw600:  ~"(max-width: 599px)";
