--- a/src/styles/blocks/subscribe-form.less
+++ b/src/styles/blocks/subscribe-form.less
@@ -26,7 +26,7 @@
         color: @black;
         border: none;
         &::placeholder {
-            color: @grey;
+            color: @gray;
         }
     }
     &__submit {
