--- a/src/styles/blocks/about.less
+++ b/src/styles/blocks/about.less
@@ -1,21 +1,10 @@
 .about {
     &__container {
-        .container();
+        .container;
     }
     &__header {
-        display: flex;
-        box-sizing: border-box;
-        justify-content: center;
-        margin: 187px auto 0px;
-        padding: 8px;
-        width: 624px;
-        height: 62px;
-        background-color: @black;
-        text-transform: uppercase;
-        font-weight: 500;
-        font-family: @font2;
-        font-size: 36px;
-        color: @white;
+        margin-bottom: 0px;
+        margin-top: 187px;
         }
     &__block1 {
         display: grid;
