--- a/src/styles/blocks/section-title.less
+++ b/src/styles/blocks/section-title.less
@@ -7,46 +7,39 @@
     text-align: center;
     font-weight: 400;
     font-size: 45px;
-    font-family: @font2
-}
-.title__container {
-margin-top: 100px;
-}
-
-.title__lenni {
-    margin-top: 70px;
-    margin-bottom: 70px;
-}
-.title__i-want-container {
-    margin-top: 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.title--small {
-    font-size: 22px;
-    margin-bottom: 46px;
-    font-weight: 400;
-    //align-self: flex-start;
-}
-.title-container__btn-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-.title__empty-block {
-    width: 106px;
-}
-.title__btn--red {
-    background-color: @orange;
-    color: @white;
-    border: none;
-    border-color: none;
-    transition: background-color 0.2s;
-    &:hover {
-        background-color: @red_dark;
+    font-family: @font2;
+    &__container {
+        margin-top: 100px;
+    }
+    &__i-want-container {
+        margin-top: 100px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    &--small {
+        font-size: 22px;
+        margin-bottom: 46px;
+        font-weight: 400;
+    }
+    &__btn-container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+    &__empty-block {
+        width: 106px;
+    }
+    &__btn--red {
+        background-color: @orange;
+        color: @white;
+        border: none;
+        border-color: none;
+        transition: background-color 0.2s;
+        &:hover {
+            background-color: @red_dark;
+        }
     }
 }
-
