--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -3,7 +3,9 @@
 @import "global/fonts.less";
 @import "global/common.less";
 // @import "vendor/swiper.less";
+@import "blocks/header.less";
 @import "blocks/subscribe-form.less";
+@import "blocks/events-short.less";
 @import "blocks/article.less";
 @import "blocks/about.less";
 @import "blocks/btn.less";
