--- a/src/styles/blocks/header.less
+++ b/src/styles/blocks/header.less
@@ -2,14 +2,26 @@
     display: flex;
     box-sizing: border-box;
     justify-content: center;
-    margin: 187px auto 0px;
-    padding: 8px;
-    width: 624px;
-    height: 62px;
+
+    margin: auto;
     background-color: @black;
     text-transform: uppercase;
-    font-weight: 500;
     font-family: @font2;
-    font-size: 36px;
     color: @white;
+    &__h2 {
+        width: 624px;
+        height: 62px;
+        font-size: 36px;
+        font-weight: 500;
+        padding: 8px;
+    }
+    &__h4 {
+        width: 162px;
+        height: 34px;
+        font-size: 16px;
+        font-weight: 600;
+        padding: 6px;
+        font-family: @font1;
+        margin-bottom: 40px;
+    }
 }
