--- a/src/styles/blocks/page-footer.less
+++ b/src/styles/blocks/page-footer.less
@@ -1,4 +1,5 @@
 .page-footer {
+    
     .container;
     padding-bottom: 75px;
     @media @bw1170 {
@@ -8,6 +9,7 @@
         padding-bottom: 60px;
     }
     &__liners {
+        margin-top: 140px;
         display: flex;
         margin-bottom: 60px;
         gap: 100px;
@@ -25,10 +27,12 @@
             height: 2px;
         }
         &::before {
-            background-color: linear-gradient(270deg, #1C1b1b 0%, rgba(255,255,255,0) 82.86%);
+            background: linear-gradient(270deg, #1C1B1B 0%, rgba(255, 255, 255, 0) 82.86%);
+
+
         }
         &::after {
-            background-color: linear-gradient(90deg, #1C1b1b 0%, rgba(255,255,255,0) 100%);
+            background: linear-gradient(90deg, #1C1B1B 0%, rgba(255, 255, 255, 0) 100%);
         }
     }
     &__block1 {
