--- a/src/styles/blocks/subscribe-form.less
+++ b/src/styles/blocks/subscribe-form.less
@@ -9,22 +9,29 @@
     }
     &__wrapper {
         display: flex;
+        flex-direction: column;
         margin-bottom: 15px;
         height: 50px;
     }
     &__field-wrapper {
+        display: flex;
         flex-flow: 1;
+        flex-direction: row;
     }
     &__input {
         box-sizing: border-box;
         width: 100%;
         height: 100%;
         background-color: @white;
+        font-size: 14px;
+        font-weight: 600px;
         border-radius: 0;
         padding: 15px 28px;
         line-height: 1.2;
         color: @black;
         border: none;
+        border-radius: 0;
+        align-self: flex-start;
         &::placeholder {
             color: @gray;
         }
@@ -32,9 +39,13 @@
     &__submit {
         box-sizing: border-box;
         display: flex;
+        text-align: center;
         justify-content: center;
         align-items: center;
-        text-align: center;
+        font-family: @font1;
+        font-size: 14px;
+        font-weight: 400;
+        align-self: flex-end;
         border-radius: 0;
         outline: none;
         height: 100%;
