--- a/src/styles/global/common.less
+++ b/src/styles/global/common.less
@@ -8,8 +8,8 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  //background-color: @gray;
-  background-image: url(../assets/images/noize.jpg);
+  background-image: url(../assets/images/noise.png);
+  background-color: rgba(222, 222, 222, 1);
   background-position: 0 0, 0 0;
   background-size: auto, 100% auto;
   background-repeat: repeat, repeat-y;
