--- a/src/styles/global/variables.less
+++ b/src/styles/global/variables.less
@@ -22,3 +22,4 @@
 @bw650: ~"(max-width: 649px)";
 @bw1170:  ~"(max-width: 1169px)";
 @bw600:  ~"(max-width: 599px)";
+@full-hd: ~"(min-width: 1920px)"
