--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -4,6 +4,7 @@
 @import "global/common.less";
 // @import "vendor/swiper.less";
 @import "blocks/header.less";
+@import "blocks/do-it.less";
 @import "blocks/subscribe-form.less";
 @import "blocks/events-short.less";
 @import "blocks/article.less";
