--- a/src/styles/blocks/page-header.less
+++ b/src/styles/blocks/page-header.less
@@ -37,8 +37,8 @@
         }
     }
     &__logo-icon {
-        width: 100%;
-        height: 100%;
+        // width: 100%;
+        // height: 100%;
     }
     &__nav {
         display: flex;
