--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -6,6 +6,8 @@
 @import "blocks/header.less";
 @import "blocks/do-it.less";
 @import "blocks/subscribe-form.less";
+@import "blocks/blog-listing.less";
+@import "blocks/contacts.less";
 @import "blocks/events-short.less";
 @import "blocks/article.less";
 @import "blocks/about.less";
