--- a/src/styles/blocks/blog-listing.less
+++ b/src/styles/blocks/blog-listing.less
@@ -1,3 +1,18 @@
 .blog-listing {
-    
+    .container;
+    &__header {
+        margin-bottom: 150px;
+        margin-top: 200px;
+    }
+    &__article-list {
+        margin-bottom: 70px;
+    }
+    &__link {
+        text-decoration: none;
+        color: @black;
+        float: right;
+        &:hover {
+            color: @red;
+        }
+    }
 }
