--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -4,6 +4,7 @@
 @import "global/common.less";
 // @import "vendor/swiper.less";
 @import "blocks/header.less";
+@import "blocks/home.less";
 @import "blocks/do-it.less";
 @import "blocks/subscribe-form.less";
 @import "blocks/blog-listing.less";
@@ -15,6 +16,7 @@
 @import "blocks/x-btn.less";
 @import "blocks/section-title.less";
 @import "blocks/field.less";
+@import "blocks/article-card.less";
 @import "blocks/table.less";
 @import "blocks/content.less";
 @import "blocks/form.less";
