--- a/src/styles/blocks/event.less
+++ b/src/styles/blocks/event.less
@@ -1,4 +1,5 @@
 .event {
+    .container;
     &__header {
         display: flex;
         align-items: center;
@@ -9,6 +10,7 @@
         font-family: @font2;
         font-size: 70px;
         font-weight: 500;
+        margin-bottom: 80px;
         //align-self: center;
     }
     &__image-container {
@@ -16,7 +18,6 @@
         flex-direction: row;
         gap: 58px;
         align-items: center;
-        background-color: chartreuse;
     }
     &__header-sub {
         font-family: @font3;
