--- a/src/styles/blocks/listing.less
+++ b/src/styles/blocks/listing.less
@@ -2,12 +2,14 @@
     .container;
     display: flex;
     flex-direction: column;
+    
     &__article-list {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
     &__events-list {
+        margin-top: 150px;
         display: flex;
         gap: 60px;
         flex-wrap: wrap;
