--- a/src/styles/blocks/page-footer.less
+++ b/src/styles/blocks/page-footer.less
@@ -1,5 +1,4 @@
 .page-footer {
-    
     .container;
     padding-bottom: 75px;
     @media @bw1170 {
@@ -27,11 +26,11 @@
             height: 2px;
         }
         &::before {
+            margin-right: 50px;
             background: linear-gradient(270deg, #1C1B1B 0%, rgba(255, 255, 255, 0) 82.86%);
-
-
         }
         &::after {
+            margin-left: 50px;
             background: linear-gradient(90deg, #1C1B1B 0%, rgba(255, 255, 255, 0) 100%);
         }
     }
@@ -74,17 +73,35 @@
         }
     }
     &__block2 {
-        display:  grid;
+        display: grid;
         grid-template-columns: 1fr 160px 1fr;
         grid-template-areas: 
-        "copyright socials create"
-        "links socials create";
+            "copyright socials create"
+            "links socials create";
     }
     &__socials {
         grid-area: socials;
     }
     &__block2-links {
         grid-area: links;
+        display: flex;
+        gap: 80px;
+    }
+    &__block2-link {
+        text-decoration: none;
+        font-size: 16px;
+        line-height: 1.3;
+        font-weight: 600;
+        color: @black;
+        transition: color 0.2s;
+        &:hover{
+            @media (hover: hover) {
+                color: @red;
+            }
+        }
+        &:active {
+            color: @red;
+        }
     }
     &__copyright {
         grid-area: copyright;
@@ -92,8 +109,18 @@
     }
     &__create {
         grid-area: create;
+        margin-left: auto;
+        align-self: flex-end;
+        display: flex;
+        align-items: flex-end;
+        gap: 15px;
+        font-weight: 600;
     }
     &__create-link {
-        
+        flex-shrink: 0;
+        font-size: 0;
+    }
+    &__create-icon {
+
     }
 }
