--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -11,6 +11,7 @@
 @import "blocks/contacts.less";
 @import "blocks/events-short.less";
 @import "blocks/article.less";
+@import "blocks/socials.less";
 @import "blocks/about.less";
 @import "blocks/btn.less";
 @import "blocks/x-btn.less";
