--- a/src/styles/blocks/subscribe-form.less
+++ b/src/styles/blocks/subscribe-form.less
@@ -53,5 +53,10 @@
         padding: 15px 23px;
         background-color: @black;
         color: @white;
+        transition: background-color 0.2s;
+        &:hover {
+            background-color: @dark_red;
+            cursor: pointer;
+        }
     }
 }
