--- a/src/styles/blocks/listing.less
+++ b/src/styles/blocks/listing.less
@@ -2,7 +2,6 @@
     .container;
     display: flex;
     flex-direction: column;
-    
     &__article-list {
         display: flex;
         flex-direction: column;
@@ -19,6 +18,27 @@
         @media @bw1020 {
             gap: 30px;
         }
+    }
+    &__events-link {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+        margin: -50px auto 150px;
+        font-weight: 600;
+        color: @black;
+        text-decoration: none;
+        transition: color 0.2s;
+        &:hover {
+            cursor: pointer;
+            color: @red;
+        }
+    }
+    &__description {
+        width: 868px;
+        margin-top: 150px;
+        margin-bottom: 60px;
+        font-weight: 400;
     }
     &__event-card {
         width: calc(33.333% - 40px);
@@ -39,5 +59,29 @@
     }
     &__more-btn {
         margin: 70px auto 0;
+    }
+    &__i-want {
+        margin-top: 50px;
+    }
+    &__bottom {
+        .container;
+        margin-top: 100px;
+        width: 100%;
+        display: flex;
+        gap: 67px;
+    }
+    &__bottom-element {
+        display: flex;
+        flex-direction: column;
+        width: 401px;
+        align-items: center;
+    }
+    &__bottom-element-title {
+        font-size: 20px;
+        font-weight: 600;
+        margin-top: 40px;
+    }
+    &__bottom-element-desc {
+        text-align: center;
     }
 }
