--- a/src/styles/blocks/listing.less
+++ b/src/styles/blocks/listing.less
@@ -35,6 +35,7 @@
         }
     }
     &__description {
+        margin-left: 150px;
         width: 868px;
         margin-top: 150px;
         margin-bottom: 60px;
