--- a/src/styles/blocks/subscribe-form.less
+++ b/src/styles/blocks/subscribe-form.less
@@ -55,7 +55,7 @@
         color: @white;
         transition: background-color 0.2s;
         &:hover {
-            background-color: @dark_red;
+            background-color: @red_dark;
             cursor: pointer;
         }
     }
