--- a/src/styles/blocks/reserve.less
+++ b/src/styles/blocks/reserve.less
@@ -32,8 +32,77 @@
     }
     &__order {
         grid-area: "order";
+        display: flex;
+        flex-direction: column;
+    }
+    &__order-items {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+    &__order-item {
+        display: flex;
+        flex-direction: row;
+        gap: 224px;
+    }
+    &__order-sum-wrapper {
+        display: flex;
+        flex-direction: row;
+        font-weight: 600;
+        font-size: 20px;
+        gap: 33.33px;
+        margin: 25px auto 53px;
+    }
+    &__order-sum-buy {
+        color: @white !important;
     }
     &__legend {
         grid-area: "legend";
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        
+    }
+    &__legend-lines {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+    &__legend-line {
+        display: inline-flex;
+        flex-direction: row;
+        gap: 9px;
+        justify-content: flex-end;
+    }
+    &__legend-box-red {
+        display: block;
+        width: 24px;
+        height: 24px;
+        background-color: @red_dark;
+    }
+    &__legend-box-black {
+        display: block;
+        width: 24px;
+        height: 24px;
+        background-color: @black;
+    }
+    &__legend-circle-black {
+        width: 24px;
+        height: 24px;
+        border: 1px solid @black;
+        border-radius: 50%;
+        margin-right: -20px;
+    }
+    &__legend-circle-red {
+        width: 24px;
+        height: 24px;
+        border: 1px solid @red_dark;
+        border-radius: 50%;
+    }
+    &__legend-circle {
+        width: 24px;
+        height: 24px;
+        background-color: @gray_dark;
+        border-radius: 50%;
     }
 }
