--- a/src/styles/blocks/blog-listing.less
+++ b/src/styles/blocks/blog-listing.less
@@ -11,6 +11,7 @@
         text-decoration: none;
         color: @black;
         float: right;
+        margin-top: 50px;
         &:hover {
             color: @red;
         }
