--- a/src/styles/global/variables.less
+++ b/src/styles/global/variables.less
@@ -22,4 +22,5 @@
 @bw650: ~"(max-width: 649px)";
 @bw1170:  ~"(max-width: 1169px)";
 @bw600:  ~"(max-width: 599px)";
+@bw500:  ~"(max-width: 499px)";
 @full-hd: ~"(min-width: 1920px)";
