--- a/src/styles/blocks/pp.less
+++ b/src/styles/blocks/pp.less
@@ -2,13 +2,19 @@
     box-sizing: border-box;
     width: 100%;
     height: 100vh;
-    min-width: 1200px;
-    padding: 90px 40px 50px;
+    //min-width: 1200px;
+    padding: 90px 100px 50px;
     background-color: fade(@black, 40%);
     backdrop-filter: blur(20px);
     overflow-y: auto;
     z-index: 110;
     display: flex;
+    @media @bw1340 {
+        padding: 90px 40px 50px;
+    }
+    @media @bw768 {
+        padding: 80px 20px 40px;
+    }
     &__wrapper {
         box-sizing: border-box;
         position: relative;
@@ -29,6 +35,9 @@
         max-width: 950px;
         margin: 0 auto;
         padding: 0 40px 40px;
+        @media @bw600 {
+            padding: 0 12px 40px;;
+        }
     }
     &__sticky-close {
         position: sticky;
@@ -49,7 +58,8 @@
         align-items: center;
         margin: -40px 0 70px -85px;
         padding: 10px 85px;
-        width: 595px;
+        max-width: 595px;
+        width: 100%;
         min-height: 80px;
         background-color: @black;
         text-transform: uppercase;
@@ -60,5 +70,20 @@
         color: @white;
         letter-spacing: 0.02em;
         z-index: 1;
+        @media @bw1170 {
+            padding: 10px 60px 10px 20px;
+            max-width: 465px;
+            margin: -40px 0 70px;
+        }
+        
+        @media @bw768 {
+            font-size: 18px;
+            margin: -40px 0 40px;
+        }
+        @media @bw500 {
+            font-size: 14px;
+            margin-right: 25px;
+            width: auto;
+        }
     }
 }
