--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -15,7 +15,7 @@
 @import "blocks/about.less";
 @import "blocks/btn.less";
 @import "blocks/x-btn.less";
-@import "blocks/section-title.less";
+@import "blocks/promo.less";
 @import "blocks/field.less";
 @import "blocks/article-card.less";
 @import "blocks/table.less";
