--- a/src/styles/blocks/promo.less
+++ b/src/styles/blocks/promo.less
@@ -16,6 +16,9 @@
             display: block;
             padding-top: 16.92%;
             width: 100%;
+            @media @bw1660 {
+                padding-top: 18.5%;
+            }
             @media @bw1020 {
                 padding-top: 22.5%;
             }
