--- a/src/styles/global/mixins.less
+++ b/src/styles/global/mixins.less
@@ -48,3 +48,32 @@
       max-width: 504px;
     }
   }
+
+  .show-nav {
+    body {
+      @media @bw1020 {
+        overflow: hidden;
+      }
+    }
+    .page-header__nav {
+      @media @bw1020 {
+        transform: translateX(0);
+      }
+    }
+    .page-header__nav-toggle {
+      &::before {
+        transform: translate(0px, 6px) rotate(45deg);
+        box-shadow: none;
+      }
+      &::after {
+        transform: translate(0px, -6px) rotate(-45deg);
+      }
+    }
+    .page-header__nav-toggle-line {
+      opacity: 0;
+    }
+  }
+
+  .pp-overflow {
+    overflow: hidden;
+  }
