--- a/src/styles/blocks/page-header.less
+++ b/src/styles/blocks/page-header.less
@@ -147,6 +147,8 @@
             width: 20px;
             border-radius: 2px;
             background-color: @black;
+            transform-origin: 50% 50%;
+            transition: transform 0.4s, box-shadow 0.4s;
         }
         &::before {
             top: 13px;
@@ -163,6 +165,6 @@
         height: 2px;
         width: 20px;
         border-radius: 2px;
-        background-color: @black;
+        background-color: @black;        
     }
 }
