--- a/src/styles/global/mixins.less
+++ b/src/styles/global/mixins.less
@@ -28,14 +28,7 @@
     visibility: hidden !important;
     pointer-events: none !important;
 }
-.show-event-popup {
-    body {
-      overflow: hidden;
-    }
-    #eventPP {
-      display: flex;
-    }
-  }
+
 
   .width_624 {
     box-sizing: border-box;
@@ -74,6 +67,14 @@
     }
   }
 
-  .pp-overflow {
-    overflow: hidden;
+  .show-event-popup {
+    body {
+      overflow: hidden;
+    }
+    #js-eventPP {
+      display: flex;
+    }
   }
+  // .pp-overflow {
+  //   overflow: hidden;
+  // }
