--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -31,3 +31,4 @@
 @import "blocks/event.less";
 @import "blocks/page-header.less";
 @import "blocks/page-footer.less";
+@import (less) "vendor/swiper.css";
