--- a/src/styles/blocks/pp.less
+++ b/src/styles/blocks/pp.less
@@ -2,13 +2,17 @@
     box-sizing: border-box;
     width: 100%;
     height: 100vh;
-    //min-width: 1200px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
     padding: 90px 100px 50px;
     background-color: fade(@black, 40%);
     backdrop-filter: blur(20px);
     overflow-y: auto;
     z-index: 110;
-    display: flex;
     @media @bw1340 {
         padding: 90px 40px 50px;
     }
@@ -47,9 +51,15 @@
         height: 0;
     }
     .x-btn {
+        &__icon {
+            pointer-events: none;
+          }
         position: absolute;
         top: -30px;
         right: -30px;
+        &:hover {
+        cursor: pointer;
+    }
     }
       
     &__title {
