--- a/src/styles/blocks/field.less
+++ b/src/styles/blocks/field.less
@@ -1,6 +1,12 @@
 .field {
     display: flex;
-    flex-direction: column;         
+    flex-direction: column;
+    label.error,
+    span.error {
+      display: block;
+      margin: 5px 0 0;
+      color: @red;
+    }         
     &__input,
     &__textarea {
       box-sizing: border-box;
