--- a/src/styles/blocks/subscribe-form.less
+++ b/src/styles/blocks/subscribe-form.less
@@ -15,12 +15,18 @@
     &__field-wrapper {
         display: flex;
         flex-flow: 1;
-        flex-direction: row;
+        flex-direction: column;
         margin-bottom: 15px;
+        width: 410px;
+    }
+    &__field-and-error-wrapper {
+        display: flex;
+        flex-direction: row;
     }
     &__input {
         box-sizing: border-box;
         width: 100%;
+        //width: 280px;
         height: 100%;
         background-color: @white;
         font-size: 14px;
@@ -36,6 +42,12 @@
             color: @gray;
         }
     }
+    label.error,
+    span.error {
+      display: block;
+      margin: 5px 0 0;
+      color: @red;
+    } 
     &__submit {
         box-sizing: border-box;
         display: flex;
@@ -45,10 +57,12 @@
         font-family: @font1;
         font-size: 14px;
         font-weight: 400;
-        align-self: flex-end;
+        align-self: flex-start;
         border-radius: 0;
         outline: none;
-        height: 100%;
+        //height: 100%;
+        width: 130px;
+        height: 55px;
         border: none;
         padding: 15px 23px;
         background-color: @black;
@@ -58,5 +72,9 @@
             background-color: @red_dark;
             cursor: pointer;
         }
+    }
+    &__error-wrapper {
+        display: flex;
+        flex-direction: column-reverse;
     }
 }
