--- a/src/styles/global/variables.less
+++ b/src/styles/global/variables.less
@@ -23,4 +23,6 @@
 @bw1170:  ~"(max-width: 1169px)";
 @bw600:  ~"(max-width: 599px)";
 @bw500:  ~"(max-width: 499px)";
+@bw320:  ~"(max-width: 319px)";
+@w320:  ~"(max-width: 320px)";
 @full-hd: ~"(min-width: 1920px)";
