--- a/src/styles/blocks/promo.less
+++ b/src/styles/blocks/promo.less
@@ -9,29 +9,51 @@
         align-items: center;
         justify-content: center;
     }
-    &__picture {
-        position: relative;
-        &::before {
-            content: "";
-            display: block;
-            //padding-top: 16.92%;
-            width: 100%;
-            // @media @bw1660 {
-            //     padding-top: 18.5%;
-            // }
-            // @media @bw1020 {
-            //     padding-top: 22.5%;
-            // }
-          }
+    // &__picture {
+    //     // position: relative;
+    //     // // width: 1920px;
+    //     // // height: 325px;
+    //     // &::before {
+    //     //     content: "";
+    //     //     display: block;
+    //     //     //padding-top: 16.92%;
+    //     //     width: 100%;
+    //     //     // @media @bw1660 {
+    //     //     //     padding-top: 18.5%;
+    //     //     // }
+    //     //     // @media @bw1020 {
+    //     //     //     padding-top: 22.5%;
+    //     //     // }
+    //     // }
+    // }
+    &__image {
+        //object-fit: cover;
+        width: 1920px;
+        height: 325px;
+        @media @bw1340 {
+            width: 1518.28px;
+            height: 257px;
+            padding-left: -89.14px;
+        }
+        @media @bw768 {
+            width: 974.77px;
+            height: 165px;
+            padding-left: -103px;
+        }
+        @media @w320 {
+            width: 437.17px;
+            height: 74px;
+            padding-left: -58.91px;
+        }
     }
-    &__img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+    // &__img {
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     object-fit: cover;
+    // }
     &__title{
         display: flex;
         align-items: center;
