--- a/src/styles/blocks/promo.less
+++ b/src/styles/blocks/promo.less
@@ -3,33 +3,24 @@
         margin-top: 100px;
     }
     &__i-want-container {
-        margin-top: 100px;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        margin-top: 100px;
+        @media @bw768 {
+            margin-top: 73px;
+        }
+        @media @bw500 {
+            margin-top: 40px;
+        }
     }
-    // &__picture {
-    //     // position: relative;
-    //     // // width: 1920px;
-    //     // // height: 325px;
-    //     // &::before {
-    //     //     content: "";
-    //     //     display: block;
-    //     //     //padding-top: 16.92%;
-    //     //     width: 100%;
-    //     //     // @media @bw1660 {
-    //     //     //     padding-top: 18.5%;
-    //     //     // }
-    //     //     // @media @bw1020 {
-    //     //     //     padding-top: 22.5%;
-    //     //     // }
-    //     // }
-    // }
+
     &__image {
-        //object-fit: cover;
         width: 1920px;
         height: 325px;
+        margin-top: 70px;
+        margin-bottom: 70px;
         @media @bw1340 {
             width: 1518.28px;
             height: 257px;
@@ -39,21 +30,17 @@
             width: 974.77px;
             height: 165px;
             padding-left: -103px;
+            margin-top: 51px;
+            margin-bottom: 51px;
         }
-        @media @w320 {
+        @media @bw500 {
             width: 437.17px;
             height: 74px;
             padding-left: -58.91px;
+            margin-top: 28px;
+            margin-bottom: 28px;
         }
     }
-    // &__img {
-    //     position: absolute;
-    //     top: 0;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 100%;
-    //     object-fit: cover;
-    // }
     &__title{
         display: flex;
         align-items: center;
@@ -64,7 +51,15 @@
         font-weight: 400;
         font-size: 45px;
         font-family: @font2;
-        margin-bottom: 70px;
+        @media @bw1340 {
+            font-size: 35px;
+        }
+        @media @bw768 {
+            font-size: 30px;
+        }
+        @media @bw500 {
+            font-size: 13px;
+        }
     }
     &__text {
         display: flex;
@@ -72,16 +67,18 @@
         justify-content: center;
         text-transform: uppercase;
         color: @black;
-        text-align: center;
-        font-weight: 400;
-        font-size: 45px;
         font-family: @font2;
-        margin-top: 70px;
-        &--small {
-            font-size: 22px;
-            margin-bottom: 46px;
+        text-align: center;
+        font-size: 22px;
+        margin-bottom: 46px;
+        font-weight: 400;
+        @media @bw768 {
+            font-size: 16px;
+            font-weight: 500;
+        }
+        @media @bw500 {
+            font-size: 13px;
             font-weight: 400;
-            margin-top: 0;
         }
     }
     
@@ -90,8 +87,25 @@
         flex-direction: row;
         align-items: center;
         justify-content: center;
+        @media @bw500 {
+            flex-direction: column-reverse;
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+    }
+    &__btn {
+        width: 100%;
     }
     &__empty-block {
         width: 106px;
+        @media @bw1340 {
+            width: 95px;;
+        }
+        @media @bw768 {
+            width: 56px;
+        }
+        @media @bw500 {
+            height: 25px;
+        }
     }
 }
