--- a/src/styles/blocks/header.less
+++ b/src/styles/blocks/header.less
@@ -3,7 +3,8 @@
     box-sizing: border-box;
     justify-content: center;
 
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     background-color: @black;
     text-transform: uppercase;
     font-family: @font2;
@@ -14,6 +15,20 @@
         font-size: 36px;
         font-weight: 500;
         padding: 8px;
+        @media @bw1340 {
+            width: 604px;
+        }
+        @media @bw768 {
+            width: 566px;
+            height: 52px;
+            font-size: 24px;
+            padding: 11px;
+        }
+        @media @bw500 {
+            width: 280px;
+            height: 42px;
+            font-size: 16px;
+        }
     }
     &__h4 {
         width: 162px;
