--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,15 +1,21 @@
+@import "vendor/normalize.less";
 @import "global/variables.less";
 @import "global/mixins.less";
 @import "global/fonts.less";
 @import "global/common.less";
-// @import "vendor/swiper.less";
+@import "vendor/swiper.less";
+@import "vendor/swiper_theme.less";
+@import "vendor/selectric.less";
+@import "vendor/selectric_theme.less";
+@import "vendor/air-datepicker.less";
+@import "vendor/air-datepicker_theme.less";
 @import "blocks/header.less";
 @import "blocks/home.less";
 @import "blocks/do-it.less";
 @import "blocks/subscribe-form.less";
 @import "blocks/blog-listing.less";
 @import "blocks/contacts.less";
-@import "blocks/events-short.less";
+@import "blocks/upcoming.less";
 @import "blocks/article.less";
 @import "blocks/socials.less";
 @import "blocks/about.less";
@@ -31,4 +37,3 @@
 @import "blocks/event.less";
 @import "blocks/page-header.less";
 @import "blocks/page-footer.less";
-@import (less) "vendor/swiper.css";
