--- a/src/styles/blocks/subscribe-form.less
+++ b/src/styles/blocks/subscribe-form.less
@@ -6,6 +6,11 @@
         font-weight: 600;
         font-size: 16px;
         line-height: 1.3;
+        @media @bw500 {
+            font-weight: 400;
+            font-size: 13px;
+            //margin-left: 20px;
+        }
     }
     &__wrapper {
         display: flex;
@@ -18,6 +23,10 @@
         flex-direction: column;
         margin-bottom: 15px;
         width: 410px;
+        @media @bw500 {
+            font-weight: 400;
+            font-size: 12px;
+        }
     }
     &__field-and-error-wrapper {
         display: flex;
@@ -40,6 +49,12 @@
         align-self: flex-start;
         &::placeholder {
             color: @gray;
+        }
+        @media @bw500 {
+            font-weight: 400;
+            font-size: 12px;
+            color: @black;
+            height: 46px;
         }
     }
     label.error,
@@ -72,9 +87,21 @@
             background-color: @red_dark;
             cursor: pointer;
         }
+        @media @bw500 {
+            font-weight: 400;
+            font-size: 12px;
+            width: 116px;
+            height: 46px;
+        }
     }
     &__error-wrapper {
         display: flex;
         flex-direction: column-reverse;
+    }
+    &__check-label {
+        @media @bw500 {
+            font-weight: 400;
+            font-size: 12px;
+        }
     }
 }
