--- a/src/styles/blocks/blog-listing.less
+++ b/src/styles/blocks/blog-listing.less
@@ -3,9 +3,16 @@
     &__header {
         margin-bottom: 150px;
         margin-top: 200px;
+        @media @bw500 {
+            margin-top: 80px;
+            margin-bottom: 80px;
+        }
     }
     &__article-list {
         margin-bottom: 70px;
+        @media @bw500 {
+            margin-bottom: 60px;
+        }
     }
     &__link {
         text-decoration: none;
@@ -14,6 +21,9 @@
         margin-top: 50px;
         &:hover {
             color: @red;
+        }
+        @media @bw500 {
+            margin-top: 30px;
         }
     }
 }
