--- a/src/styles/blocks/article-card.less
+++ b/src/styles/blocks/article-card.less
@@ -8,6 +8,9 @@
             box-shadow: 0 0 30px fade(@black, 55%);
         }
     }
+    @media @bw768 {
+        flex-direction: column;
+    }
     &__link {
         flex-shrink: 0;
         align-self: flex-start;
@@ -46,6 +49,14 @@
             width: 100%;
             padding-top: 62.3126%;
         }
+        @media @bw768 {
+            width: 708px;
+            height: 439px;
+        }
+        @media @bw500 {
+            width: 280px;
+            height: 175px;
+        }
     }
     &__info {
         box-sizing: border-box;
@@ -57,12 +68,20 @@
         padding-bottom: 30px;
         padding: 30px 0;
         padding-right: 150px;
+        @media @bw500 {
+            padding: 0px;
+        }
     }
     &__time {
         margin: 0 0 40px;
         font-weight: 300;
         font-size: 16px;
         line-height: 22px;
+        @media @bw500 {
+            font-size: 14px;
+            margin-top: 10px;
+            margin-bottom: 20px;
+        }
     }
     &__title-link,
     &__description {
@@ -77,6 +96,9 @@
             color: @red;
             text-decoration-color: @red;
         }
+        @media @bw500 {
+            margin-bottom: 10px;
+        }
     }
     &__title {
         margin: 0;
@@ -84,11 +106,20 @@
         font-weight: 600;
         font-size: 24px;
         line-height: 33px;
+        @media @bw768 {
+            font-size: 20px;
+        }
+        @media @bw500 {
+            font-size: 16px;
+        }
     }
     &__description {
         margin: 0;
         font-size: 16px;
         line-height: 33px;
+        @media @bw500 {
+            font-size: 14px;
+        }
     }
     &__arrow {
         position: absolute;
@@ -96,6 +127,10 @@
         bottom: 30px;
         color: inherit;
         transition: none;
+        @media @bw500 {
+            top: auto;
+            bottom: 0;
+        }
     }
     & + .article-card {
         margin-top: 120px;
