--- a/src/styles/blocks/contacts.less
+++ b/src/styles/blocks/contacts.less
@@ -9,6 +9,7 @@
         margin-bottom: 100px
     }
     @media @bw500 {
+        margin-top: 120px;
     }
     &__wrapper {
         margin-top: 150px;
