--- a/src/styles/blocks/article.less
+++ b/src/styles/blocks/article.less
@@ -5,4 +5,19 @@
     &__content {
         max-width: 880px;
     }
+    ul {
+        margin-bottom: 75px !important;
+        @media @bw7680 {
+            margin-bottom: 55px !important;
+        }
+        @media @bw500 {
+        }
+    }
+    ol {
+        margin-top: 50px !important;
+        @media @bw7680 {
+            margin-top: 40px !important;
+        }
+    }
+
 }
