--- a/src/styles/blocks/check.less
+++ b/src/styles/blocks/check.less
@@ -16,6 +16,9 @@
       color: @red;
       
     } 
+    &--gray {
+      cursor: default;
+    }
     &__input {
         .is-hidden();
         &:checked {
