--- a/src/styles/blocks/event.less
+++ b/src/styles/blocks/event.less
@@ -1,5 +1,9 @@
 .event {
     .container;
+    @media @bw500 {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
     &__url{
         margin-left: 190px;
         @media @bw1340 {
