--- a/src/styles/blocks/events.less
+++ b/src/styles/blocks/events.less
@@ -31,10 +31,10 @@
             margin-bottom: 130px;
         }
         @media @bw768 {
-            margin-top: 100px;
+            margin-bottom: 100px;
         }
         @media @bw500 {
-            margin-top: 80px;;
+            margin-bottom: 80px;;
         }
     }
 }
