--- a/src/styles/blocks/promo.less
+++ b/src/styles/blocks/promo.less
@@ -1,6 +1,9 @@
 .promo {
     &__container {
         margin-top: 100px;
+        @media @bw768 {
+            margin-top: 80px;
+        }
     }
     &__i-want-container {
         display: flex;
