--- a/src/styles/blocks/upcoming.less
+++ b/src/styles/blocks/upcoming.less
@@ -1,12 +1,27 @@
 .upcoming {
     margin-top: 210px;
     background-color: @white;
+    @media @bw768 {
+        margin-top: 130px;
+    }
+    @media @bw500 {
+        margin-top: 100px;
+    }
     &__container {
         .container;
     }
 
     &__header {
         margin-bottom: 150px;
+        @media @bw1340 {
+            margin-bottom: 130px;
+        }
+        @media @bw768 {
+            margin-bottom: 100px;
+        }
+        @media @bw500 {
+            margin-bottom: 80px;
+        }
     }
 
     &__nav {
