--- a/src/styles/blocks/article-card.less
+++ b/src/styles/blocks/article-card.less
@@ -10,7 +10,7 @@
   }
   @media @bw768 {
     flex-direction: column;
-  }
+  }//11111df
   &__link {
     flex-shrink: 0;
     align-self: flex-start;
